feat: bme280 driver as lib

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -12,12 +12,13 @@
 platform = espressif32
 board = lolin_d32
 framework = arduino
-upload_port = /dev/cu.usbserial-14130
-monitor_port = /dev/cu.usbserial-14130
+upload_port = /dev/cu.usbserial-14220
+monitor_port = /dev/cu.usbserial-14220
 monitor_speed = 115200
 build_flags = -std=c++11
 lib_deps =
     Wire
     git@github.com:256dpi/arduino-mqtt.git
     git@github.com:GoogleCloudPlatform/google-cloud-iot-arduino.git
+    git@github.com:Jblew/BME280_driver.git@
     I2Cdevlib-Core
