feat: bme280 using bosch library

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -20,5 +20,5 @@ lib_deps =
     Wire
     git@github.com:256dpi/arduino-mqtt.git
     git@github.com:GoogleCloudPlatform/google-cloud-iot-arduino.git
-    git@github.com:Jblew/BME280_driver.git@
+    Adafruit BME280 Library@2.0.2
     I2Cdevlib-Core
