ci: deploy panel to firebase with vue prebuild

--- a/panel/firebase.json
+++ b/panel/firebase.json
@@ -1,6 +1,10 @@
 {
   "hosting": {
-    "public": "public",
+    "public": "public/dist",
+    "predeploy": [
+      "npm --prefix=\"public\" install",
+      "npm --prefix=\"public\" build"
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
