--- a/panel/public/package.json
+++ b/panel/public/package.json
@@ -16,7 +16,8 @@
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
     "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.2"
+    "vue-property-decorator": "^8.4.2",
+    "vue-stateful-resource": "^1.1.2"
   },
   "devDependencies": {
     "@types/chart.js": "^2.9.22",
