ci(panel): auto build vue before deployment

--- a/panel/firebase.json
+++ b/panel/firebase.json
@@ -3,7 +3,7 @@
     "public": "public/dist",
     "predeploy": [
       "npm --prefix=\"public\" install",
-      "npm --prefix=\"public\" build"
+      "npm --prefix=\"public\" run build"
     ],
     "ignore": [
       "firebase.json",
